added dialog component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -56,3 +56,13 @@
     <li class="second-path">Benutzerlogbuch</li>
   </ul>
 </div>
+<div>
+  <button
+    (click)="openDialog()"
+    mat-raised-button
+    class="example-icon favorite-icon new-action-button"
+    aria-label="Example icon-button with heart icon"
+  >
+    + Neue Action
+  </button>
+</div>
