--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>Neue Aktion Hinzufügen</h1>
 <div mat-dialog-content>
   <!--import ReactiveFormsModule and FormsModule(for [(ngModel)]) in app.module.ts-->
-  <form>
+  <form [formGroup]="userLogForm" autocomplete="on">
     <mat-form-field appearance="outline">
       <mat-label>Kategorie</mat-label>
       <mat-select formControlName="category" placeholder="Kategorie">
@@ -20,8 +20,13 @@
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Benutzer</mat-label>
-      <input formControlName="user" matInput placeholder="Benutzer" />
+      <mat-select formControlName="user" placeholder="Benutzer">
+        <mat-option *ngFor="let item of users" [value]="item">{{
+          item
+        }}</mat-option>
+      </mat-select>
     </mat-form-field>
+
     <mat-form-field appearance="outline">
       <mat-label>Objekt</mat-label>
       <mat-select formControlName="object" placeholder="Objekt">
@@ -41,7 +46,12 @@
   <button class="cancel-button" mat-raised-button mat-dialog-close color="warn">
     Cancel
   </button>
-  <button mat-raised-button color="primary">
+  <button
+    mat-raised-button
+    color="primary"
+    mat-dialog-close
+    (click)="addUserLog()"
+  >
     Save
     <!-- {{ actionBtn }} -->
   </button>
