--- a/src/app/user-log/user-log.component.html
+++ b/src/app/user-log/user-log.component.html
@@ -1,1 +1,73 @@
-<h1>Benutzerlogbuch</h1>
+<div class="container">
+  <h1>Benutzerlogbuch</h1>
+  <mat-form-field appearance="standard">
+    <mat-label>Wonach Suchen Sie? </mat-label>
+    <input matInput (keyup)="applyFilter($event)" #input />
+  </mat-form-field>
+
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="Nr.">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nr.</th>
+        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Datum">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum</th>
+        <td mat-cell *matCellDef="let row">{{ row.date | date : "medium" }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Kategorien">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Kategorien</th>
+        <td mat-cell *matCellDef="let row">{{ row.category }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Mandant">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Mandant</th>
+        <td mat-cell *matCellDef="let row">{{ row.department }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Benutzer">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Benutzer</th>
+        <td mat-cell *matCellDef="let row">{{ row.user }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Objekt">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Objekt</th>
+        <td mat-cell *matCellDef="let row">{{ row.object }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Aktionen">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Aktionen</th>
+        <td mat-cell *matCellDef="let row">{{ row.action }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Edit/Delete">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Edit/Delete</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button color="primary">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="warn">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          No data matching the filter "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 25, 100, 250]"
+      aria-label="Select page of users"
+    ></mat-paginator>
+  </div>
+</div>
