--- a/src/app/user-log/user-log.component.scss
+++ b/src/app/user-log/user-log.component.scss
@@ -19,3 +19,21 @@ th {
   max-width: 97%;
   margin: 0 auto;
 }
+.example-form-field {
+  margin-right: 20px;
+  width: 15%;
+}
+.example-form-field-search {
+  width: 25%;
+  margin-right: 20px;
+}
+.filter-button {
+  margin-right: 20px;
+}
+.title-table-continer {
+  display: flex;
+  justify-content: space-between;
+}
+.blue-button {
+  background-color: #2c64b2;
+}
