--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -63,6 +63,6 @@
     class="example-icon favorite-icon new-action-button"
     aria-label="Example icon-button with heart icon"
   >
-    + Neue Action
+    + Neue Aktion
   </button>
 </div>
