--- a/src/app/user-log/user-log.component.html
+++ b/src/app/user-log/user-log.component.html
@@ -1,3 +1,73 @@
+<!-- Navbar -->
+<mat-toolbar color="primary">
+  <div class="hst">
+    <img src="../../assets/hst_logo.png" alt="image_hst1" />
+  </div>
+  <span class="header">Benutzerlogbuch</span>
+  <span class="example-spacer"></span>
+
+  <button
+    mat-icon-button
+    class="example-icon favorite-icon"
+    aria-label="Example icon-button with heart icon"
+  >
+    <mat-icon>search</mat-icon>
+  </button>
+
+  <div class="buttons">
+    <button
+      mat-icon-button
+      class="example-icon"
+      aria-label="Example icon-button with share icon"
+    >
+      <mat-icon>alarm</mat-icon>
+    </button>
+  </div>
+  <div class="user-items">
+    <img class="image-user" src="../../assets/user.png" alt="user" />
+    <span class="user-name">Tobias Kraus</span>
+    <mat-icon>keyboard_arrow_down</mat-icon>
+  </div>
+</mat-toolbar>
+
+<div class="navbar">
+  <ul class="nav-items">
+    <li class="nav-item">Dashboard</li>
+    <li class="nav-item">Übersicht</li>
+    <li class="nav-item">Anlagenzustand</li>
+    <li class="nav-item">Analyse</li>
+    <li class="nav-item">Einstellungen</li>
+    <li class="nav-item">Alarm-Manager</li>
+    <li class="nav-item">Benutzerverwaltung</li>
+    <li class="nav-item">Administration</li>
+  </ul>
+</div>
+<div>
+  <ul class="sub-nav">
+    <li class="home-icon">
+      <mat-icon>home</mat-icon>
+    </li>
+    <li class="arrow">
+      <mat-icon>keyboard_arrow_right</mat-icon>
+    </li>
+    <li class="first-path">Benutzerverwaltung</li>
+    <li class="arrow">
+      <mat-icon>keyboard_arrow_right</mat-icon>
+    </li>
+    <li class="second-path">Benutzerlogbuch</li>
+  </ul>
+</div>
+<div>
+  <button
+    (click)="openDialog()"
+    mat-raised-button
+    class="example-icon favorite-icon new-action-button"
+    aria-label="Example icon-button with heart icon"
+  >
+    + Neue Aktion
+  </button>
+</div>
+<!--Filter  -->
 <div class="container">
   <h2>Benutzerlogbuch</h2>
   <div class="filter-top">
@@ -76,6 +146,7 @@
     <h2>Ergebnissie</h2>
     <div class="title-table-">
       <button
+        (click)="printPage()"
         class="filter-button blue-button"
         mat-raised-button
         color="primary"
@@ -94,47 +165,57 @@
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="Nr.">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nr.</th>
-        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+        <th mat-header-cell *matHeaderCellDef>Nr.</th>
+        <td mat-cell *matCellDef="let row; let i = index">{{ i + 1 }}</td>
       </ng-container>
 
       <ng-container matColumnDef="Datum">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="date">Datum</th>
         <td mat-cell *matCellDef="let row">{{ row.date | date : "medium" }}</td>
       </ng-container>
 
       <ng-container matColumnDef="Kategorien">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Kategorien</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="category">
+          Kategorien
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.category }}</td>
       </ng-container>
 
       <ng-container matColumnDef="Mandant">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Mandant</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="department">
+          Mandant
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.department }}</td>
       </ng-container>
 
       <ng-container matColumnDef="Benutzer">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Benutzer</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="user">
+          Benutzer
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.user }}</td>
       </ng-container>
 
       <ng-container matColumnDef="Objekt">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Objekt</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="object">
+          Objekt
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.object }}</td>
       </ng-container>
 
       <ng-container matColumnDef="Aktionen">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Aktionen</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="action">
+          Aktionen
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.action }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Edit/Delete">
-        <th mat-header-cell *matHeaderCellDef>Edit/Delete</th>
+      <ng-container matColumnDef="Bearbeiten/Löschen">
+        <th mat-header-cell *matHeaderCellDef>Bearbeiten/Löschen</th>
         <td mat-cell *matCellDef="let row">
           <button mat-icon-button color="primary" (click)="editUserLog(row)">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button color="warn">
+          <button (click)="deleteUserLog(row.id)" mat-icon-button color="warn">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
