--- a/src/app/user-log/user-log.component.html
+++ b/src/app/user-log/user-log.component.html
@@ -72,7 +72,7 @@
       <!-- mandant -->
       <mat-form-field appearance="outline" class="example-form-field">
         <mat-label>Mandant</mat-label>
-        <mat-select placeholder="Mandant">
+        <mat-select [(ngModel)]="filteredDepartment" placeholder="Mandant">
           <mat-option *ngFor="let item of departments" [value]="item">{{
             item
           }}</mat-option>
@@ -80,7 +80,7 @@
       </mat-form-field>
       <mat-form-field appearance="outline" class="example-form-field">
         <mat-label>Benutzer</mat-label>
-        <mat-select placeholder="Benutzer">
+        <mat-select [(ngModel)]="filteredUser" placeholder="Benutzer">
           <mat-option *ngFor="let item of users" [value]="item">{{
             item
           }}</mat-option>
@@ -88,7 +88,7 @@
       </mat-form-field>
       <mat-form-field appearance="outline" class="example-form-field">
         <mat-label>Objekt</mat-label>
-        <mat-select placeholder="Objekt">
+        <mat-select [(ngModel)]="filteredObject" placeholder="Objekt">
           <mat-option *ngFor="let item of objects" [value]="item">{{
             item
           }}</mat-option>
@@ -97,7 +97,11 @@
       <div>
         <mat-form-field appearance="outline" class="example-form-field">
           <mat-label>Zeitraum Start</mat-label>
-          <input matInput [matDatepicker]="startPicker" />
+          <input
+            [(ngModel)]="filteredStartDate"
+            matInput
+            [matDatepicker]="startPicker"
+          />
           <mat-datepicker-toggle
             matSuffix
             [for]="startPicker"
@@ -106,7 +110,11 @@
         </mat-form-field>
         <mat-form-field appearance="outline" class="example-form-field">
           <mat-label>Zeitraum Ende</mat-label>
-          <input matInput [matDatepicker]="endPicker" />
+          <input
+            [(ngModel)]="filteredEndDate"
+            matInput
+            [matDatepicker]="endPicker"
+          />
           <mat-datepicker-toggle
             matSuffix
             [for]="endPicker"
@@ -115,13 +123,14 @@
         </mat-form-field>
         <mat-form-field appearance="outline" class="example-form-field">
           <mat-label>Schnellauswahl</mat-label>
-          <mat-select placeholder="Benutzer">
+          <mat-select [(ngModel)]="filteredFastChoose" placeholder="Benutzer">
             <mat-option *ngFor="let item of fastSearch" [value]="item">{{
               item
             }}</mat-option>
           </mat-select>
         </mat-form-field>
         <button
+          (click)="onUserLogFilter()"
           class="filter-button blue-button"
           mat-raised-button
           color="primary"
@@ -129,7 +138,7 @@
           <mat-icon>filter_list</mat-icon>
           Filter
         </button>
-        <button mat-raised-button color="warn">
+        <button (click)="onUserLogFilterClear()" mat-raised-button color="warn">
           <mat-icon>delete</mat-icon> Löschen
         </button>
       </div>
