--- a/src/app/user-log/user-log.component.html
+++ b/src/app/user-log/user-log.component.html
@@ -87,9 +87,9 @@
         </mat-select>
       </mat-form-field>
       <mat-form-field appearance="outline" class="example-form-field">
-        <mat-label>Objekt</mat-label>
-        <mat-select [(ngModel)]="filteredObject" placeholder="Objekt">
-          <mat-option *ngFor="let item of objects" [value]="item">{{
+        <mat-label>Kategorien</mat-label>
+        <mat-select [(ngModel)]="filteredCategory" placeholder="Katagorien">
+          <mat-option *ngFor="let item of categories" [value]="item">{{
             item
           }}</mat-option>
         </mat-select>
