added dialog component

--- a/src/app/user-log/user-log.component.html
+++ b/src/app/user-log/user-log.component.html
@@ -250,6 +250,7 @@
 
     <mat-paginator
       [pageSizeOptions]="[5, 10, 25, 100, 250]"
+      [showFirstLastButtons]="showFirstLastButtons"
       aria-label="Select page of users"
     ></mat-paginator>
   </div>
